# larder

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.agent-ready/: agent-ready-report.md  agent-ready-scores.json  agent-ready-scores.prev.json
.claude/: settings.local.json
.claude/skills/import-recipe/: SKILL.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: database.py  main.py  mobile_main.py  models.py
api/routes/: meal_plan.py  meal_plan_ai.py  recipes.py
docs/: IDEAS.md  agent-execution.md
docs/adr/: 0001-record-architecture-decisions.md  0002-home-ai-llm-proxy.md  0003-inline-groq-client.md  TEMPLATE.md
frontend/: index.html  mobile.html
mcp_server/: server.py
scripts/: download_images.py  export_meal_plan_pdf.py  import_meal_plan_recipes.py  migrate.py  scrape_recipe.py  seed.py
specs/: TEMPLATE.md
tests/: test_nutrition_display.html
