# Minimal project + tooling config (agent-ready baseline).
# Fill in real metadata and a build-system once the package takes shape.
[project]
name = "larder"
version = "0.0.0"
description = "Greenfield project scaffolded with an agent-ready baseline."
requires-python = ">=3.12"
# TODO: add real dependencies and a [build-system] when the package is defined.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# A sensible default rule set: pyflakes, pycodestyle, isort, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
