[project]
name = "jb-wiki"
version = "0.1.0"
description = "Wiki personale di ricette con FastAPI + MCP server"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.138.1",
    "mcp>=1.28.0",
    "pydantic>=2.13.4",
    "recipe-scrapers>=15.11.0",
    "uvicorn>=0.49.0",
]
